--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "autosuggest-highlight": "^3.3.4",
     "aws-amplify": "^6.5.1",
     "axios": "^1.7.4",
+    "country-state-city": "^3.2.1",
     "dayjs": "^1.11.13",
     "embla-carousel": "^8.2.0",
     "embla-carousel-auto-height": "^8.2.0",
@@ -85,6 +86,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-flags-select": "^2.2.3",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-i18next": "^15.0.1",
@@ -93,6 +95,7 @@
     "react-map-gl": "^7.1.7",
     "react-markdown": "^9.0.1",
     "react-organizational-chart": "^2.2.1",
+    "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.5",
     "react-router": "^6.26.1",
     "react-router-dom": "^6.26.1",
@@ -106,6 +109,7 @@
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.5",
     "turndown": "^7.2.0",
+    "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.21.4",
     "zod": "^3.23.8"
   },
